--- a/SoftUniBazar/appsettings.json
+++ b/SoftUniBazar/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=Contacts;User Id=mystronguser;Password=myStrongPassword12#;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=sqlserverbazarexam;Database=Contacts;User Id=mystronguser;Password=myStrongPassword12#;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
